# polymarket-trading-infrastructure

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/assets/: executor.rs  mod.rs
src/connectors/: auth.rs  mod.rs  polymarket.rs  websocket.rs
src/events/: market_events.rs  mod.rs
src/utils/: mod.rs  telemetry.rs
src/watchers/: mod.rs  orderbook_watcher.rs  round_watcher.rs
